<resources>
    <string name="app_name">ParquesYJardines</string>

    <string name="informacion">Información</string>
    <string name="categoria">Categoría</string>
    <string name="descripcion">Descripción</string>
    <string name="direccion">Dirección</string>
    <string name="horario">Horario</string>
    <string name="identificador">Identificador</string>
    <string name="localizacion">Localización</string>
    <string name="nombre">Nombre</string>
    <string name="url">URL</string>
    <string name="verGM">Ver en Google Maps</string>

    <string name="dato_no_existe">No existe este dato</string>

    <string name="orden_nombre">Ordenar alfabeticamente</string>
    <string name="orden_tipo">Ordenar por caracteristicas</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
